--- a/css/style.css
+++ b/css/style.css
@@ -1,61 +1,87 @@
-body    {
-    background-color: cadetblue;
+html, body    {
+    height: 100%;
+    background-color: rgb(255, 255, 255);
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 2.5vh;
 }
 
-.wrapper{
-  position: relative;
-  top: 40vh;
+.wrapper {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 }
-.results{
-  border: 5px solid #FFAB33;
-  width: 200px;
-  height: 175px;
-  text-align: center;
-  padding: 10px;
-  margin: auto;
-  background: #FF5733;
+
+
+.winner-container {
+    height: 20vh;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 }
 
 #winner {
-    border: 2px solid lightblue;
-    height: 30px;
-}
-
-#player {
-    color:lightsteelblue;
-}
-
-#computer {
-    color:lightgreen;
-}
-
-.buttons {
+    font-weight: bolder;
+    font-size: 5vh;
+    padding: 8px;
     align-self: center;
+    animation: 1s anim-flipX ease 1;
+}
+
+@keyframes anim-flipX {
+    0% {
+        opacity: 0;
+        transform: rotateX(90def);
+    }
+    50% {
+        opacity: 1;
+        transform: rotateX(720deg);
+    }
+    100% {
+        opacity: 1;
+        transform: rotate(720deg);
+    }
+}
+
+.buttons-container {
     text-align: center;
-    border: 2px solid lightpink;
     margin: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;
 }
+
 button {
-    height: 40px;
-    width: 75px;
-    padding: 3px;
-    margin: 15px;
+    border: 2px solid white;
+    background-color: white;
+    height: 20vh;
+    cursor: pointer;
+    align-items: center;
 }
 
-#button:hover{
-  background: #DFF30B;
+img {
+    height: 100%;
 }
 
-#message{
-  font-size: 26px;
-  margin-bottom: 30px;
-  text-align: center;
+.play-button {
+    opacity: 0.4;
 }
 
-.hide{
-  visibility: hidden;
+.play-button:hover {
+    opacity: 1;
 }
 
-.reveal{
-  visibility: visible;
+#score-container {
+    max-width: 95vw;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+#player, #computer {
+    margin: 5vw;
+    text-align: center;
 }
